--- a/DapartmentChair/templates/admin-base.html
+++ b/DapartmentChair/templates/admin-base.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Dashboard 2</title>
+  <title>Borrowing System</title>
+
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/logo.png' %}">
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -20,7 +22,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
   <style>
- /* From Uiverse.io by Galahhad */ 
+ /* From Uiverse.io by Galahhad */
  .theme-switch {
   --toggle-size: 16px; /* Further reduced toggle size */
   --container-width: 3em; /* Reduced from 3.5em */
@@ -225,16 +227,16 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-  
+
 
   {% block extra_css %} {% endblock %}
 
 
 
-  
+
 
     {% block extra_js %} {% endblock %}
-  
+
 </head>
 <body class="hold-transition   sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
   <div id="django-messages" style="display:none;">
@@ -248,7 +250,7 @@
     <div class="preloader flex-column justify-content-center align-items-center">
       <img class="animation__wobble" src="{% static 'dist/img/pit_logo.png' %}" alt="AdminLTELogo" height="60" width="60">
     </div>
-  
+
     <!-- Navbar -->
     {% if not is_login_page %}
     <nav class="main-header navbar navbar-expand navbar-dark">
@@ -261,7 +263,7 @@
           <a href="{% url 'admin-dashboard' %}" class="nav-link">Home</a>
         </li>
       </ul>
-  
+
       <!-- Right navbar links -->
       <ul class="navbar-nav ml-auto">
         <!-- Navbar Search -->
@@ -287,27 +289,27 @@
   </div>
 </label>
         </li>
-  
-   
+
+
         <li class="nav-item">
           <a class="nav-link" data-widget="fullscreen" href="#" role="button">
             <i class="fas fa-expand-arrows-alt"></i>
           </a>
         </li>
-      
+
       </ul>
     </nav>
     {% endif %}
     <!-- /.navbar -->
-  
-    
+
+
 
     {% block content %}
 
     {% endblock content %}
-  
+
     </div>
-    
+
 
 
     <script>
@@ -326,7 +328,7 @@ document.addEventListener("DOMContentLoaded", function() {
       console.log(el);  // Add this for debugging
       var messageType = el.getAttribute('data-type');
       var messageContent = el.getAttribute('data-content');
-  
+
 
       // Display Toastr notification based on the message type
       if (messageType === 'success') {
