--- a/reservation/templates/reservation-changeprofile.html
+++ b/reservation/templates/reservation-changeprofile.html
@@ -388,7 +388,7 @@
         <div class="container-fluid">
             <div class="card" style="border-top: 4px solid #031e23; box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;">
                 <div class="card-header">
-                    <h4 class="card-title text-primary" style="font-size: 30px;">Change Profile</h4>
+                    <h4 class="card-title text-primary" style="font-size: 1.5rem;">Change Profile</h4>
                 </div>
                 <div class="card-body">
                     <div class="basic-form">
@@ -396,40 +396,39 @@
                             {% csrf_token %}
                             <!-- Change Image Section -->
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-dark" style="font-size: 15px; left: 150px">Change Image</label>
-                                <div class="col-sm-12 col-md-7">
+                                <label class="col-form-label col-12 col-md-3 text-dark text-md-right">Change Image</label>
+                                <div class="col-12 col-md-7 text-center text-md-left">
                                     <!-- Display user's profile picture or default image -->
                                     <img id="profileImage" src="{% if user.profile_image %}{{ user.profile_image.url }}{% else %}{{ default_image_url }}{% endif %}" 
-                                         alt="Profile Image" class="img-fluid rounded-circle" 
-                                         style="width: 60px; height: 60px; object-fit: cover; box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;"><br>
-                                    <input type="file" id="fileInput" name="profilePicture" class="mt-3" style="border: 1px solid #bebebe; padding: 0.5rem; border-radius: 0.25rem;">
+                                         alt="Profile Image" class="img-fluid rounded-circle mb-3"
+                                         style="width: 80px; height: 80px; object-fit: cover; box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;">
+                                    <input type="file" id="fileInput" name="profilePicture" class="form-control-file mt-2" style="border: 1px solid #bebebe; padding: 0.5rem; border-radius: 0.25rem;">
                                 </div>
                             </div>
                             <!-- Name Input -->
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-dark" style="font-size: 15px; left: 150px">Name</label>
-                                <div class="col-sm-12 col-md-7">
-                                    <input type="text" name="name" class="form-control" style="border: 1px solid #bebebe; width: 53%;" value="{{ user.name }}" required>
+                                <label class="col-form-label col-12 col-md-3 text-dark text-md-right">Name</label>
+                                <div class="col-12 col-md-7">
+                                    <input type="text" name="name" class="form-control" style="border: 1px solid #bebebe;" value="{{ user.name }}" required>
                                 </div>
                             </div>
                             <!-- Student ID Input -->
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-dark" style="font-size: 15px; left: 150px">Student ID</label>
-                                <div class="col-sm-12 col-md-7">
-                                    <input type="text" name="student_id" class="form-control" style="border: 1px solid #bebebe; width: 53%;" value="{{ user.student_id }}" required>
+                                <label class="col-form-label col-12 col-md-3 text-dark text-md-right">Student ID</label>
+                                <div class="col-12 col-md-7">
+                                    <input type="text" name="student_id" class="form-control" style="border: 1px solid #bebebe;" value="{{ user.student_id }}" required>
                                 </div>
                             </div>
                             <!-- Email Address Input -->
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3 text-dark" style="font-size: 15px; left: 150px">Email Address</label>
-                                <div class="col-sm-12 col-md-7">
-                                    <input type="email" name="email" class="form-control" style="border: 1px solid #bebebe; width: 53%;" value="{{ user.email }}" required>
+                                <label class="col-form-label col-12 col-md-3 text-dark text-md-right">Email Address</label>
+                                <div class="col-12 col-md-7">
+                                    <input type="email" name="email" class="form-control" style="border: 1px solid #bebebe;" value="{{ user.email }}" required>
                                 </div>
                             </div>
                             <!-- Submit Button -->
                             <div class="form-group row mb-4">
-                                <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
-                                <div class="col-sm-12 col-md-7">
+                                <div class="col-12 text-center text-md-left">
                                     <button type="submit" class="btn btn-primary" id="toastr-success-top-right">Save</button>
                                 </div>
                             </div>
@@ -438,6 +437,7 @@
                 </div>
             </div>
         </div>
+        
         
 
         
