--- a/faculty/templates/item-record.html
+++ b/faculty/templates/item-record.html
@@ -32,6 +32,8 @@
     <script src="{% static 'vendor/moment/moment.min.js'%}"></script>
     <script src="{% static 'js/dashboard/dashboard-2.js'%}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!-- SweetAlert2 CDN -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
 
 
