--- a/templates/login.html
+++ b/templates/login.html
@@ -102,7 +102,7 @@
             <div class="row button">
                 <input type="submit" id="toastr-success-bottom-left" value="Login">
             </div>
-            <div class="">
+            <div class="signup-link">
                 <span class="text-center">For student reservation item &nbsp; <a href="{% url 'reservation-login' %}" style="text-decoration: underline; font-weight: 600;">Login</a></span>
             </div>
         </form>
