--- a/DapartmentChair/templates/admin-borrow-details-dashboard.html
+++ b/DapartmentChair/templates/admin-borrow-details-dashboard.html
@@ -106,7 +106,7 @@
                     data-accordion="false">
                     <li class="nav-header">Main Menu</li>
                     <li class="nav-item">
-                        <a href="{% url 'admin-dashboard' %}" class="nav-link">
+                        <a href="{% url 'admin-dashboard' %}" class="nav-link active">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 Dashboard
@@ -155,7 +155,7 @@
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="{% url 'admin-borrow-record' %}" class="nav-link active">
+                        <a href="{% url 'admin-borrow-record' %}" class="nav-link ">
                             <i class="nav-icon fas fa-clipboard"></i>
                             <p>
                                 Borrowed Records
